@@ -4,7 +4,7 @@ Donate link: https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_i
 Tags: google, seo, permalinks, installation, common settings, post teaser, page link, page order, canonical, sitemap, h1, core tweaks, seo automatic
 Requires at least: 2.8
 Tested up to: 3.0.1
-Stable tag: 3.4
+Stable tag: 3.5
 
 Extends built in features of Wordpress and combines common plugins into one.
 
